--- a/app.scss
+++ b/app.scss
@@ -1,4 +1,8 @@
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .splash-header {/*
   background-color: hsla(222, 13%, 16%, 0.5);*/
   background: linear-gradient(to top, hsla(222, 13%, 56%, 0.3), hsla(222, 13%, 16%, 0.5));
@@ -33,13 +37,13 @@
 }
 .product-info {
   position: absolute;
+  color: white;
+  font-family: Helvetica, Arial;
   background: hsla(222, 13%, 16%, 0.5);
   border: solid 1px hsla(255, 100%, 100%, 0.1);
-  left: -webkit-calc(50% - 250px);
   left: calc(50% - 250px);
   top: 100px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 20px 20px;
   width: 500px;
 }
 .tint-overlay {
@@ -59,6 +63,7 @@
 }
 video#bgvid {
   position: fixed; left: 0; top: 0;
+  width: 100%;
   z-index: -100;
 }
 body {
