--- a/app.scss
+++ b/app.scss
@@ -21,19 +21,27 @@
 }
 .float-input {
   float: left;
+  padding: 20px 0;
+}
+.float-input-left {
+  padding: 20px 20px 20px 30px; 
 }
 .input-thin {
   width: 150px;
-  height: 40px;
   font-size: 20px;
+  height: 40px;
   border-radius: 2px;
   border: none;
-  margin: 20px;
+  margin: 10px 20px;
   outline: none;
   padding: 0 15px;
 }
 .product-info h2 {
   font-family: 'Slabo 27px', serif;
+  margin: 20px 0;
+}
+.product-info label {
+  line-height: 2px;
 }
 .product-info {
   position: absolute;
@@ -56,6 +64,19 @@
   width: 100%; 
   height: 100%;
 }
+.wrapper {
+  clear: both;
+  padding: 0 0 30px 0;
+}
+.go-button {
+  width: 360px;
+  font-size: 20px;
+  background: #0C0;
+  font-family: Helvetica, Arial;
+  padding: 20px;
+  outline: none;
+  border: none;
+}
 .container {
   position: absolute;
   width: 100%;
@@ -63,7 +84,9 @@
 }
 video#bgvid {
   position: fixed; left: 0; top: 0;
+  background-size: cover;
   width: 100%;
+  height: auto;
   z-index: -100;
 }
 body {
