more padding on title

--- a/app.scss
+++ b/app.scss
@@ -38,7 +38,7 @@
 }
 .product-info h2 {
   font-family: 'Slabo 27px', serif;
-  margin: 20px 0;
+  margin: 30px 0;
 }
 .product-info label {
   line-height: 2px;
@@ -70,6 +70,7 @@
 }
 .go-button {
   width: 360px;
+  color: white;
   font-size: 20px;
   background: #0C0;
   font-family: Helvetica, Arial;
