--- a/app.scss
+++ b/app.scss
@@ -78,6 +78,9 @@
   outline: none;
   border: none;
 }
+.go-button:active {
+  background: #0A0;
+}
 .container {
   position: absolute;
   width: 100%;
