--- a/app.scss
+++ b/app.scss
@@ -87,10 +87,12 @@
   text-align: center;
 }
 video#bgvid {
-  position: fixed; left: 0; top: 0;
+  position: fixed; 
+  left: 0; 
+  top: 0;
   background-size: cover;
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   z-index: -100;
 }
 body {
