--- a/app.scss
+++ b/app.scss
@@ -3,8 +3,10 @@
   margin: 0;
   padding: 0;
 }
-.splash-header {/*
-  background-color: hsla(222, 13%, 16%, 0.5);*/
+body, html {
+  height: 100%;
+}
+.splash-header {
   background: linear-gradient(to top, hsla(222, 13%, 56%, 0.3), hsla(222, 13%, 16%, 0.5));
   border-bottom: solid 1px hsla(255, 100%, 100%, .3);
   width: 100%;
@@ -84,6 +86,7 @@
 .container {
   position: absolute;
   width: 100%;
+  height: 100%;
   text-align: center;
 }
 video#bgvid {
