updates to sidepanel

--- a/pages/sidepanel.scss
+++ b/pages/sidepanel.scss
@@ -9,6 +9,13 @@
   color: white;
   font-family: Helvetica, Arial;
 }
+.side-panel form {
+  padding: 20px;
+  text-align: left;
+}
+.side-panel div {
+  padding: 10px 0;
+}
 .side-panel img {
   width: 150px;
   margin: 15px;
