--- a/pages/resultitem.scss
+++ b/pages/resultitem.scss
@@ -1,5 +1,5 @@
 .result-item {
-  font-size: 15px;
+  font-size: 14px;
   color: #FFF;
   font-family: Helvetica, Arial;
   float:left;
@@ -10,6 +10,7 @@
   line-height: 25px;
 }
 .result-item img {
+  border: solid 1px #333;
   height: 150px;
 }
 .result-item button {
