--- a/app.scss
+++ b/app.scss
@@ -1,25 +1,9 @@
 * {
   box-sizing: border-box;
+}
+body {
   margin: 0;
   padding: 0;
-}
-body, html {
-  height: 100%;
-}
-.splash-header {
-  background: linear-gradient(to top, hsla(222, 13%, 56%, 0.3), hsla(222, 13%, 16%, 0.5));
-  border-bottom: solid 1px hsla(255, 100%, 100%, .3);
-  width: 100%;
-  height: auto;
-  padding: 10px;
-}
-.logo-letter {
-  margin: 25px;
-  height: 200px;
-}
-.logo {
-  margin: 10px;
-  width: 200px;
 }
 .float-input {
   float: left;
@@ -52,19 +36,9 @@ body, html {
   background: hsla(222, 13%, 16%, 0.5);
   border: solid 1px hsla(255, 100%, 100%, 0.1);
   left: calc(50% - 250px);
-  top: 100px;
+  top: 120px;
   padding: 20px 20px;
   width: 500px;
-}
-.tint-overlay {
-  position: fixed;
-  background-color: #3A3E49;
-  top: 0;
-  left: 0;
-  opacity: .50;
-  z-index: -90;
-  width: 100%; 
-  height: 100%;
 }
 .wrapper {
   clear: both;
@@ -82,21 +56,6 @@ body, html {
 }
 .go-button:active {
   background: #0A0;
-}
-.container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-}
-video#bgvid {
-  position: fixed; 
-  left: 0; 
-  top: 0;
-  background-size: cover;
-  width: auto;
-  height: 100%;
-  z-index: -100;
 }
 body {
   background: #000;
