--- a/pages/contact.scss
+++ b/pages/contact.scss
@@ -3,9 +3,9 @@
   bottom: 0;
   width: 100%;
   background: #3A3E49;
-  padding: 25px;
+  padding: 15px;
   text-align: center;
-  background: linear-gradient(to top, hsla(222, 13%, 16%, 1), hsla(222, 13%, 36%, 1));
+  background: linear-gradient(to top, hsla(222, 13%, 16%, 1), hsla(222, 13%, 36%, .2));
   border-top: solid 1px hsla(255, 100%, 100%, .3);
 }
 .contact-footer a:link {
