--- a/app.scss
+++ b/app.scss
@@ -4,35 +4,15 @@
 body {
   margin: 0;
   padding: 0;
-}
-.float-input {
-  float: left;
-  padding: 20px 0;
-}
-.float-input-left {
-  padding: 20px 20px 20px 30px; 
-}
-.input-thin {
-  width: 150px;
-  font-size: 20px;
-  height: 40px;
-  border-radius: 2px;
-  border: none;
-  margin: 10px 20px;
-  outline: none;
-  padding: 0 15px;
+  font-family: Helvetica, Arial;
 }
 .product-info h2 {
   font-family: 'Slabo 27px', serif;
-  margin: 30px 0;
-}
-.product-info label {
-  line-height: 2px;
+  margin: 0 0 20px 0;
 }
 .product-info {
   position: absolute;
   color: white;
-  font-family: Helvetica, Arial;
   background: hsla(222, 13%, 16%, 0.5);
   border: solid 1px hsla(255, 100%, 100%, 0.1);
   left: calc(50% - 250px);
@@ -40,17 +20,14 @@ body {
   padding: 20px 20px;
   width: 500px;
 }
-.wrapper {
-  clear: both;
-  padding: 0 0 30px 0;
-}
 .go-button {
-  width: 360px;
+  font-size: 1.4em;
   color: white;
-  font-size: 20px;
+  margin-top: 20px;
+  padding: 10px 0;
+  border-radius: 2px;
+  width: 100%;
   background: #0C0;
-  font-family: Helvetica, Arial;
-  padding: 20px;
   outline: none;
   border: none;
 }
@@ -58,5 +35,5 @@ body {
   background: #0A0;
 }
 body {
-  background: #000;
+  background: hsla(222, 13%, 36%, 1);
 }
