--- a/app.scss
+++ b/app.scss
@@ -20,6 +20,13 @@ body {
   padding: 20px 20px;
   width: 500px;
 }
+.product-info-clear {
+  clear: both;
+}
+.product-info-section {
+  margin-top: 20px;
+  border-top: 1px solid hsla(255, 100%, 100%, .1);
+}
 .go-button {
   font-size: 1.4em;
   color: white;
