--- a/client/sidepanel.scss
+++ b/client/sidepanel.scss
@@ -1,13 +1,11 @@
 .side-panel {
-  font-family: 'Slabo 27px', serif;
   left: 0;
   position: fixed;
+  overflow: auto;
+  padding-left: 10px;
   width: 200px;
   background-color: hsla(222, 13%, 16%, 0.5);
   height: 100%;
-  font-size: 20px;
-  color: white;
-  font-family: Helvetica, Arial;
 }
 .side-panel form {
   padding: 20px;
