--- a/client/app.scss
+++ b/client/app.scss
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  font-family: Helvetica, Arial;
+  font-family: "Source Sans Pro", Helvetica, Arial;
 }
 .product-info h2 {
   font-family: 'Slabo 27px', serif;
