moved options to results page

--- a/client/sidepanel.scss
+++ b/client/sidepanel.scss
@@ -3,6 +3,7 @@
   position: fixed;
   overflow: auto;
   padding-left: 10px;
+  padding-bottom: 50px;
   width: 200px;
   background-color: hsla(222, 13%, 16%, 0.5);
   height: 100%;
